Set the navigation to be position relative to resolve and admin bar to not be sticky so that menu isn’t hidden behind it

--- a/httpdocs/assets/sass/_header.scss
+++ b/httpdocs/assets/sass/_header.scss
@@ -256,6 +256,7 @@ a {
 .header-top {
   display: inline-flex;
   width: 100%;
+  position: relative;
 }
 
 .header-top input {
